--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta content="width=device-width,initial-scale=1,minimal-ui" name="viewport">
     <title>Moralized Geography of Paradise Lost</title>
-    <link rel="stylesheet" href="./styles.css">
+    <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons' rel="stylesheet">
+    <link rel="stylesheet" href="./styles.styl.css">
+    <link rel="stylesheet" href="./styles.scss.css">
 </head>
 
 <body>
