--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons' rel="stylesheet">
     <link rel="stylesheet" href="./styles.styl.css">
     <link rel="stylesheet" href="./styles.scss.css">
+    <link rel="stylesheet" href="./styles.css">
 </head>
 
 <body>
