Add project description

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta content="width=device-width,initial-scale=1,minimal-ui" name="viewport">
-    <title>Moralized Geography of Paradise Lost</title>
+    <meta name="description" content="A Map of Paradise Lost is an exploratory map that offers a visual entry point into the complex and multitemporal terrestrial space of John Milton’s epic poem. The points on the map are the unambiguous place-name mentions found in the epic poem that have been geocoded manually for accuracy.">
+    <meta name="author" content="Randa El Khatib (University of Victoria) and Marcel Schaeben (University of Cologne)">
+    <title>A Map of Paradise Lost</title>
     <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons' rel="stylesheet">
     <link rel="stylesheet" href="./styles.styl.css">
     <link rel="stylesheet" href="./styles.scss.css">
